--- a/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/.cproject
+++ b/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/.cproject
@@ -323,4 +323,5 @@
 			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
