--- a/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Debug/makefile
+++ b/3-Firmware/Four_Quad_DC_Motor_Driver_Firmware/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: Four_Quad_DC_Motor_Driver_Firmware.elf secondary-outputs
 
 # Tool invocations
-Four_Quad_DC_Motor_Driver_Firmware.elf Four_Quad_DC_Motor_Driver_Firmware.map: $(OBJS) $(USER_OBJS) C:\Users\isikemir\Desktop\Courses\EE463\TermProject\EE463-HardwareProject\3-Firmware\Four_Quad_DC_Motor_Driver_Firmware\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Four_Quad_DC_Motor_Driver_Firmware.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\isikemir\Desktop\Courses\EE463\TermProject\EE463-HardwareProject\3-Firmware\Four_Quad_DC_Motor_Driver_Firmware\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Four_Quad_DC_Motor_Driver_Firmware.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Four_Quad_DC_Motor_Driver_Firmware.elf Four_Quad_DC_Motor_Driver_Firmware.map: $(OBJS) $(USER_OBJS) C:\Users\Pineapple\Desktop\damn_okul\EE463\TermProject\EE463-HardwareProject\3-Firmware\Four_Quad_DC_Motor_Driver_Firmware\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Four_Quad_DC_Motor_Driver_Firmware.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Pineapple\Desktop\damn_okul\EE463\TermProject\EE463-HardwareProject\3-Firmware\Four_Quad_DC_Motor_Driver_Firmware\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Four_Quad_DC_Motor_Driver_Firmware.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
